--- a/index.html
+++ b/index.html
@@ -20,6 +20,15 @@ Log of the meetings:
  <li>
   15 Nov 2017: Went through the table of contents, discussed the presheaf categories on page 24ff.
  </li>
+ <li>
+  22 Nov 2017: Planned.
+ </li>
+ <li>
+  29 Nov 2017: Planned.
+ </li>
+ <li>
+  6 Dec 2017: Planned.
+ </li>
 </ol>
 
 </BODY>
