Add room information

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ Log of the meetings:
   15 Nov 2017: Went through the table of contents, discussed the presheaf categories on page 24ff.
  </li>
  <li>
-  22 Nov 2017: Planned.
+  22 Nov 2017: Planned. Booked C1 for 13:00 - 15:00. 
  </li>
  <li>
   29 Nov 2017: Planned.
