update room & plan for first meeting

--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
 <body>
 
 <H1>Sheaves in Geometry and Logic</H1>
-<H2>Reading group at Nottingham</H2>
+<H2>Seminar / Reading Group at Nottingham</H2>
 
 Log of the meetings:
 
 <ul>
  <li>
-  15 Nov 2017: Went through the table of contents, discussed the presheaf categories on page 24ff.
+  15 Nov 2017 (0th meeting): We went through the table of contents, discussed the presheaf categories on page 24ff.
  </li>
  <li>
-  22 Nov 2017: Planned. Booked C1 for 13:00 - 15:00. 
+  22 Nov 2017 (1st meeting): Planned. We will be in C80, 1pm-3pm. Paolo will start with chapter 1. 
  </li>
  <li>
   29 Nov 2017: Planned.
