Update after 2017-11-22 meeting

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@ Log of the meetings:
   15 Nov 2017 (0th meeting): We went through the table of contents, discussed the presheaf categories on page 24ff.
  </li>
  <li>
-  22 Nov 2017 (1st meeting): Planned. We will be in C80, 1pm-3pm. Paolo will start with chapter 1. 
+  22 Nov 2017 (1st meeting): Examples of topoi: presheaves, finite sets. Limits in presheaf categories.
  </li>
  <li>
-  29 Nov 2017: Planned.
+  29 Nov 2017: Planned, C60, 2:30pm to 4:30pm. Subobject classifier.
  </li>
  <li>
   6 Dec 2017: Planned.
