Update after second meeting

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </style>
 
 <meta http-equiv="Content-type" content="text/html;charset=UTF-8">
+<script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.2/MathJax.js?config=TeX-MML-AM_CHTML'></script>
 <title>Sheaves in Geometry and Logic - Reading group at Nottingham</title>
 </head>
 
@@ -24,10 +25,13 @@ Log of the meetings:
   22 Nov 2017 (1st meeting): Examples of topoi: presheaves, finite sets. Limits in presheaf categories.
  </li>
  <li>
-  29 Nov 2017: Planned, C60, 2:30pm to 4:30pm. Subobject classifier.
+  29 Nov 2017 (2nd meeting): Continuous \(G\)-sets, definition and first properties of subobject classifiers, subobject classifiers for \(\mathsf{Set}\), \(\mathsf{Set} \times \mathsf{Set}\) and \(G\)-sets.
  </li>
  <li>
   6 Dec 2017: Planned.
+ </li>
+ <li>
+  17 Jan 2018: Planned.
  </li>
 </ul>
 
