--- a/index.html
+++ b/index.html
@@ -28,10 +28,16 @@ Log of the meetings:
   29 Nov 2017 (2nd meeting): Continuous \(G\)-sets, definition and first properties of subobject classifiers, subobject classifiers for \(\mathsf{Set}\), \(\mathsf{Set} \times \mathsf{Set}\) and \(G\)-sets.
  </li>
  <li>
-  6 Dec 2017: Planned.
+  6 Dec 2017 (3rd meeting): Continuous actions of infinite permutation groups. Equivalence of the two definitions of subobject classifiers. Subobject classifier for \(M\)-sets.
  </li>
  <li>
-  17 Jan 2018: Planned.
+  17 Jan 2018: C80 1pm
+ </li>
+ <li>
+  24 Jan 2018: C80 1pm
+ </li>
+ <li>
+  31 Jan 2018: C60 1pm
  </li>
 </ul>
 
