Add links to videos

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@ Log of the meetings:
   22 Nov 2017 (1st meeting): Examples of topoi: presheaves, finite sets. Limits in presheaf categories.
  </li>
  <li>
-  29 Nov 2017 (2nd meeting): Continuous \(G\)-sets, definition and first properties of subobject classifiers, subobject classifiers for \(\mathsf{Set}\), \(\mathsf{Set} \times \mathsf{Set}\) and \(G\)-sets.
+     29 Nov 2017 (2nd meeting): Continuous \(G\)-sets, definition and first properties of subobject classifiers, subobject classifiers for \(\mathsf{Set}\), \(\mathsf{Set} \times \mathsf{Set}\) and \(G\)-sets (<a href="http://files.capriotti.io/sheaves/2.mp4">video</a>).
  </li>
  <li>
-  6 Dec 2017 (3rd meeting): Continuous actions of infinite permutation groups. Equivalence of the two definitions of subobject classifiers. Subobject classifier for \(M\)-sets.
+  6 Dec 2017 (3rd meeting): Continuous actions of infinite permutation groups. Equivalence of the two definitions of subobject classifiers. Subobject classifier for \(M\)-sets (<a href="http://files.capriotti.io/sheaves/3.mp4">video</a>).
  </li>
  <li>
   17 Jan 2018: C80 1pm
