Add number of participants

--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@ Log of the meetings:
 
 <ul>
  <li>
-  15 Nov 2017 (0th meeting): We went through the table of contents, discussed the presheaf categories on page 24ff.
+  15 Nov 2017 (0th meeting, 5 participants): We went through the table of contents, discussed the presheaf categories on page 24ff.
  </li>
  <li>
-  22 Nov 2017 (1st meeting): Examples of topoi: presheaves, finite sets. Limits in presheaf categories.
+  22 Nov 2017 (1st meeting, 10 participants): Examples of topoi: presheaves, finite sets. Limits in presheaf categories.
  </li>
  <li>
-     29 Nov 2017 (2nd meeting): Continuous \(G\)-sets, definition and first properties of subobject classifiers, subobject classifiers for \(\mathsf{Set}\), \(\mathsf{Set} \times \mathsf{Set}\) and \(G\)-sets (<a href="http://files.capriotti.io/sheaves/2.mp4">video</a>).
+     29 Nov 2017 (2nd meeting, 9 participants): Continuous \(G\)-sets, definition and first properties of subobject classifiers, subobject classifiers for \(\mathsf{Set}\), \(\mathsf{Set} \times \mathsf{Set}\) and \(G\)-sets (<a href="http://files.capriotti.io/sheaves/2.mp4">video</a>).
  </li>
  <li>
-  6 Dec 2017 (3rd meeting): Continuous actions of infinite permutation groups. Equivalence of the two definitions of subobject classifiers. Subobject classifier for \(M\)-sets (<a href="http://files.capriotti.io/sheaves/3.mp4">video</a>).
+  6 Dec 2017 (3rd meeting, 5 participants): Continuous actions of infinite permutation groups. Equivalence of the two definitions of subobject classifiers. Subobject classifier for \(M\)-sets (<a href="http://files.capriotti.io/sheaves/3.mp4">video</a>).
  </li>
  <li>
   17 Jan 2018: C80 1pm
