Host videos on S3

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@ Log of the meetings:
   22 Nov 2017 (1st meeting, 10 participants): Examples of topoi: presheaves, finite sets. Limits in presheaf categories.
  </li>
  <li>
-     29 Nov 2017 (2nd meeting, 9 participants): Continuous \(G\)-sets, definition and first properties of subobject classifiers, subobject classifiers for \(\mathsf{Set}\), \(\mathsf{Set} \times \mathsf{Set}\) and \(G\)-sets (<a href="http://files.capriotti.io/sheaves/2.mp4">video</a>).
+     29 Nov 2017 (2nd meeting, 9 participants): Continuous \(G\)-sets, definition and first properties of subobject classifiers, subobject classifiers for \(\mathsf{Set}\), \(\mathsf{Set} \times \mathsf{Set}\) and \(G\)-sets (<a href="https://s3.eu-west-2.amazonaws.com/sheaves-videos/sheaves/2.mp4">video</a>).
  </li>
  <li>
-  6 Dec 2017 (3rd meeting, 5 participants): Continuous actions of infinite permutation groups. Equivalence of the two definitions of subobject classifiers. Subobject classifier for \(M\)-sets (<a href="http://files.capriotti.io/sheaves/3.mp4">video</a>).
+  6 Dec 2017 (3rd meeting, 5 participants): Continuous actions of infinite permutation groups. Equivalence of the two definitions of subobject classifiers. Subobject classifier for \(M\)-sets (<a href="https://s3.eu-west-2.amazonaws.com/sheaves-videos/sheaves/3.mp4">video</a>).
  </li>
  <li>
   17 Jan 2018: C80 1pm
