Add entry for last session

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ Log of the meetings:
   6 Dec 2017 (3rd meeting, 5 participants): Continuous actions of infinite permutation groups. Equivalence of the two definitions of subobject classifiers. Subobject classifier for \(M\)-sets (<a href="https://s3.eu-west-2.amazonaws.com/sheaves-videos/sheaves/3.mp4">video</a>).
  </li>
  <li>
-  17 Jan 2018: C80 1pm
+  17 Jan 2018 (4th meeting, 9 participants): Subobject classifier for various other presheaf categories. General case of subobject classifier for presheaves (<a href="https://s3.eu-west-2.amazonaws.com/sheaves-videos/sheaves/4.mp4">video</a>).
  </li>
  <li>
   24 Jan 2018: C80 1pm
