--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ Log of the meetings:
   17 Jan 2018 (4th meeting, 9 participants): Subobject classifier for various other presheaf categories. General case of subobject classifier for presheaves (<a href="https://s3.eu-west-2.amazonaws.com/sheaves-videos/sheaves/4.mp4">video</a>).
  </li>
  <li>
-  24 Jan 2018 (5th meeting, 7 participants): Sheaves on topological spaces, with various examples and non-examples (video to be added).
+  24 Jan 2018 (5th meeting, 7 participants): Sheaves on topological spaces, with various examples and non-examples (<a href="https://s3.eu-west-2.amazonaws.com/sheaves-videos/sheaves/5.mp4">video</a>).
  </li>
  <li>
   31 Jan 2018: C60 1pm
