--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ Log of the meetings:
   24 Jan 2018 (5th meeting, 7 participants): Sheaves on topological spaces, with various examples and non-examples (<a href="https://s3.eu-west-2.amazonaws.com/sheaves-videos/sheaves/5.mp4">video</a>).
  </li>
  <li>
-  31 Jan 2018: C60 1pm
+  31 Jan 2018 (6th meeting, 5 participants): Bundles, locally trivial bundles, vector bundles, covering spaces. Tangent bundle of a manifold. Sheaf of sections of a bundle. Beginning of the construction of the étale bundle of a presheaf (<a href="https://s3.eu-west-2.amazonaws.com/sheaves-videos/sheaves/6.mp4">video</a>).
  </li>
 </ul>
 
