Add future meetings

--- a/index.html
+++ b/index.html
@@ -41,5 +41,36 @@ Log of the meetings:
  </li>
 </ul>
 
+Future meetings:
+<ul>
+ <li>
+  7 Feb 2018 (3pm, C80)
+ </li>
+ <li>
+  14 Feb 2018 (3pm, C80)
+ </li>
+ <li>
+  21 Feb 2018 (3pm, <b>C1</b>)
+ </li>
+ <li>
+  28 Feb 2018 (3pm, C80)
+ </li>
+ <li>
+  7 Mar 2018 (3pm, C80)
+ </li>
+ <li>
+  7 Mar 2018 (3pm, C80)
+ </li>
+ <li>
+  14 Mar 2018 (3pm, C80)
+ </li>
+ <li>
+  21 Mar 2018 (3pm, C80)
+ </li>
+ <li>
+  28 Mar 2018 (3pm, C80)
+ </li>
+</ul>
+
 </BODY>
 </html>
