Update after meeting 7

--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@ Log of the meetings:
  <li>
   31 Jan 2018 (6th meeting, 5 participants): Bundles, locally trivial bundles, vector bundles, covering spaces. Tangent bundle of a manifold. Sheaf of sections of a bundle. Beginning of the construction of the étale bundle of a presheaf (<a href="https://s3.eu-west-2.amazonaws.com/sheaves-videos/sheaves/6.mp4">video</a>).
  </li>
+ <li>
+  7 Feb 2018 (7th meeting, 8 participants): Full construction of the adjunction between presheaves and étale bundles. Sheaves as a reflective subcategory of presheaves (<a href="https://s3.eu-west-2.amazonaws.com/sheaves-videos/sheaves/7.mp4">video</a>).
+ </li>
 </ul>
 
 Future meetings:
 <ul>
- <li>
-  7 Feb 2018 (3pm, C80)
- </li>
  <li>
   14 Feb 2018 (3pm, C80)
  </li>
