--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@ Log of the meetings:
  <li>
   7 Feb 2018 (7th meeting, 8 participants): Full construction of the adjunction between presheaves and étale bundles. Sheaves as a reflective subcategory of presheaves (<a href="https://s3.eu-west-2.amazonaws.com/sheaves-videos/sheaves/7.mp4">video</a>).
  </li>
+ <li>
+  14 Feb 2018 (8th meeting, 5 participants): Grothendieck topologies and sites. Trivial, dense and atomic topologies. Bases of Grothendieck topologies. Sheaves over a site. Limits of sheaves. Sheaves over a base (<a href="https://s3.eu-west-2.amazonaws.com/sheaves-videos/sheaves/8.mp4">video</a>).
+ </li>
 </ul>
 
 Future meetings:
 <ul>
- <li>
-  14 Feb 2018 (3pm, C80)
- </li>
  <li>
   21 Feb 2018 (3pm, <b>C1</b>)
  </li>
