--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
 
 <style type="text/css">
+ p.participants { font-size: small }
+ p.speaker .title { font-style: italic }
 </style>
 
 <meta http-equiv="Content-type" content="text/html;charset=UTF-8">
@@ -13,41 +15,9 @@
 <body>
 
 <H1>Sheaves in Geometry and Logic</H1>
-<H2>Seminar / Reading Group at Nottingham</H2>
+<h3>Seminar / Reading Group at Nottingham</h3>
 
-Log of the meetings:
-
-<ul>
- <li>
-  15 Nov 2017 (0th meeting, 5 participants): We went through the table of contents, discussed the presheaf categories on page 24ff.
- </li>
- <li>
-  22 Nov 2017 (1st meeting, 10 participants): Examples of topoi: presheaves, finite sets. Limits in presheaf categories.
- </li>
- <li>
-     29 Nov 2017 (2nd meeting, 9 participants): Continuous \(G\)-sets, definition and first properties of subobject classifiers, subobject classifiers for \(\mathsf{Set}\), \(\mathsf{Set} \times \mathsf{Set}\) and \(G\)-sets (<a href="https://s3.eu-west-2.amazonaws.com/sheaves-videos/sheaves/2.mp4">video</a>).
- </li>
- <li>
-  6 Dec 2017 (3rd meeting, 5 participants): Continuous actions of infinite permutation groups. Equivalence of the two definitions of subobject classifiers. Subobject classifier for \(M\)-sets (<a href="https://s3.eu-west-2.amazonaws.com/sheaves-videos/sheaves/3.mp4">video</a>).
- </li>
- <li>
-  17 Jan 2018 (4th meeting, 9 participants): Subobject classifier for various other presheaf categories. General case of subobject classifier for presheaves (<a href="https://s3.eu-west-2.amazonaws.com/sheaves-videos/sheaves/4.mp4">video</a>).
- </li>
- <li>
-  24 Jan 2018 (5th meeting, 7 participants): Sheaves on topological spaces, with various examples and non-examples (<a href="https://s3.eu-west-2.amazonaws.com/sheaves-videos/sheaves/5.mp4">video</a>).
- </li>
- <li>
-  31 Jan 2018 (6th meeting, 5 participants): Bundles, locally trivial bundles, vector bundles, covering spaces. Tangent bundle of a manifold. Sheaf of sections of a bundle. Beginning of the construction of the étale bundle of a presheaf (<a href="https://s3.eu-west-2.amazonaws.com/sheaves-videos/sheaves/6.mp4">video</a>).
- </li>
- <li>
-  7 Feb 2018 (7th meeting, 8 participants): Full construction of the adjunction between presheaves and étale bundles. Sheaves as a reflective subcategory of presheaves (<a href="https://s3.eu-west-2.amazonaws.com/sheaves-videos/sheaves/7.mp4">video</a>).
- </li>
- <li>
-  14 Feb 2018 (8th meeting, 5 participants): Grothendieck topologies and sites. Trivial, dense and atomic topologies. Bases of Grothendieck topologies. Sheaves over a site. Limits of sheaves. Sheaves over a base (<a href="https://s3.eu-west-2.amazonaws.com/sheaves-videos/sheaves/8.mp4">video</a>).
- </li>
-</ul>
-
-Future meetings:
+<h2>Next meetings</h2>
 <ul>
  <li>
   21 Feb 2018 (3pm, <b>C1</b>)
@@ -68,6 +38,92 @@ Future meetings:
   28 Mar 2018 (3pm, C80)
  </li>
 </ul>
+
+<hr />
+
+<h2>Past meetings</h2>
+
+<h3>8th meeting - 14 Feb 2017</h3>
+    <p class="speaker"><span class="title">Speaker</span>: Jakob von Raumer
+    <span class="video">(<a href="https://s3.eu-west-2.amazonaws.com/sheaves-videos/sheaves/8.mp4">video</a>)</span>
+    </p>
+    <p class="summary">
+Grothendieck topologies and sites. Trivial, dense and atomic topologies. Bases of Grothendieck topologies. Sheaves over a site. Limits of sheaves. Sheaves over a base
+    </p>
+    <p class="participants">8 participants.</p>
+</h3>
+
+<h3>7th meeting - 7 Feb 2017</h3>
+    <p class="speaker"><span class="title">Speaker</span>: Paolo Capriotti
+    <span class="video">(<a href="https://s3.eu-west-2.amazonaws.com/sheaves-videos/sheaves/7.mp4">video</a>)</span>
+    </p>
+    <p class="summary">
+        Full construction of the adjunction between presheaves and étale bundles. Sheaves as a reflective subcategory of presheaves.
+    </p>
+    <p class="participants">8 participants.</p>
+</h3>
+
+<h3>6th meeting - 31 Jan 2017</h3>
+    <p class="speaker"><span class="title">Speaker</span>: Paolo Capriotti
+    <span class="video">(<a href="https://s3.eu-west-2.amazonaws.com/sheaves-videos/sheaves/6.mp4">video</a>)</span>
+    </p>
+    <p class="summary">
+        Bundles, locally trivial bundles, vector bundles, covering spaces. Tangent bundle of a manifold. Sheaf of sections of a bundle. Beginning of the construction of the étale bundle of a presheaf.
+    </p>
+    <p class="participants">5 participants.</p>
+</h3>
+
+<h3>5th meeting - 24 Jan 2017</h3>
+    <p class="speaker"><span class="title">Speaker</span>: Paolo Capriotti
+    <span class="video">(<a href="https://s3.eu-west-2.amazonaws.com/sheaves-videos/sheaves/5.mp4">video</a>)</span>
+    </p>
+    <p class="summary">
+        Sheaves on topological spaces, with various examples and non-examples.
+    </p>
+    <p class="participants">7 participants.</p>
+</h3>
+
+<h3>4th meeting - 17 Jan 2017</h3>
+    <p class="speaker"><span class="title">Speaker</span>: Paolo Capriotti
+    <span class="video">(<a href="https://s3.eu-west-2.amazonaws.com/sheaves-videos/sheaves/4.mp4">video</a>)</span>
+    </p>
+    <p class="summary">
+        Subobject classifier for various other presheaf categories. General case of subobject classifier for presheaves.
+    </p>
+    <p class="participants">9 participants.</p>
+</h3>
+
+<h3>3rd meeting - 6 Dec 2017</h3>
+    <p class="speaker"><span class="title">Speaker</span>: Paolo Capriotti
+    <span class="video">(<a href="https://s3.eu-west-2.amazonaws.com/sheaves-videos/sheaves/3.mp4">video</a>)</span>
+    </p>
+    <p class="summary">Continuous actions of infinite permutation groups. Equivalence of the two definitions of subobject classifiers. Subobject classifier for \(M\)-sets.
+    </p>
+    <p class="participants">5 participants.</p>
+</h3>
+
+
+<h3>2nd meeting - 29 Nov 2017</h3>
+    <p class="speaker"><span class="title">Speaker</span>: Paolo Capriotti
+    <span class="video">(<a href="https://s3.eu-west-2.amazonaws.com/sheaves-videos/sheaves/2.mp4">video</a>)</span>
+    </p>
+    <p class="summary">
+        Continuous \(G\)-sets, definition and first properties of subobject classifiers, subobject classifiers for \(\mathsf{Set}\), \(\mathsf{Set} \times \mathsf{Set}\) and \(G\)-sets .</p>
+    <p class="participants">9 participants.</p>
+</h3>
+
+<h3>1st meeting - 22 Nov 2017</h3>
+    <p class="speaker"><span class="title">Speaker</span>: Paolo Capriotti</p>
+    <p class="summary">Examples of topoi: presheaves, finite sets. Limits in presheaf categories.</p>
+    <p class="participants">10 participants.</p>
+</h3>
+
+
+<h3>0th meeting - 15 Nov 2017</h3>
+    <p class="speaker"><span class="title">Speaker</span>: Paolo Capriotti</p>
+    <p class="summary">Summary of the contents of the book: sheaves, Grothendieck topoi, elementary topoi, classifying topoi, locales, logical aspects of topos theory. Some examples of presheaf categories.</p>
+    <p class="participants">5 participants.</p>
+</h3>
 
 </BODY>
 </html>
