--- a/index.html
+++ b/index.html
@@ -2,22 +2,117 @@
 <html lang="en">
 <head>
 
+<link rel="stylesheet" href="https://gitcdn.link/repo/Chalarangelo/mini.css/master/dist/mini-nord.min.css">
+
 <style type="text/css">
- p.participants { font-size: small }
+ .participants { font-size: small; text-align: right }
  p.speaker .title { font-style: italic }
 </style>
 
 <meta http-equiv="Content-type" content="text/html;charset=UTF-8">
 <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.2/MathJax.js?config=TeX-MML-AM_CHTML'></script>
-<title>Sheaves in Geometry and Logic - Reading group at Nottingham</title>
+<title>Sheaves in Geometry and Logic - Nottingham reading group</title>
 </head>
 
 <body>
 
-<H1>Sheaves in Geometry and Logic</H1>
-<h3>Seminar / Reading Group at Nottingham</h3>
 
-<h2>Next meetings</h2>
+<div class="row">
+    <div class="col-md-10 col-md-offset-2">
+    <h1 class="logo">Sheaves in Geometry and Logic</h1>
+    <h4>Nottingham reading group</h4>
+    </div>
+</div>
+
+<div class="row">
+<div class="col-sm-5 col-sm-offset-2">
+<a name="past"></a><h2>Past meetings</h2>
+
+    <div class="card fluid"><h3>8th meeting - 14 Feb 2017</h3>
+    <p class="speaker"><span class="title">Speaker</span>: Jakob von Raumer
+    <span class="video">(<a href="https://s3.eu-west-2.amazonaws.com/sheaves-videos/sheaves/8.mp4">video</a>)</span>
+    </p>
+    <p class="summary">
+Grothendieck topologies and sites. Trivial, dense and atomic topologies. Bases of Grothendieck topologies. Sheaves over a site. Limits of sheaves. Sheaves over a base
+    </p>
+    <p class="participants">5 participants.</p>
+    </div>
+
+<div class="card fluid"><h3>7th meeting - 7 Feb 2017</h3>
+    <p class="speaker"><span class="title">Speaker</span>: Paolo Capriotti
+    <span class="video">(<a href="https://s3.eu-west-2.amazonaws.com/sheaves-videos/sheaves/7.mp4">video</a>)</span>
+    </p>
+    <p class="summary">
+        Full construction of the adjunction between presheaves and étale bundles. Sheaves as a reflective subcategory of presheaves.
+    </p>
+    <p class="participants">8 participants.</p>
+</div>
+
+<div class="card fluid"><h3>6th meeting - 31 Jan 2017</h3>
+    <p class="speaker"><span class="title">Speaker</span>: Paolo Capriotti
+    <span class="video">(<a href="https://s3.eu-west-2.amazonaws.com/sheaves-videos/sheaves/6.mp4">video</a>)</span>
+    </p>
+    <p class="summary">
+        Bundles, locally trivial bundles, vector bundles, covering spaces. Tangent bundle of a manifold. Sheaf of sections of a bundle. Beginning of the construction of the étale bundle of a presheaf.
+    </p>
+    <p class="participants">5 participants.</p>
+</div>
+
+<div class="card fluid"><h3>5th meeting - 24 Jan 2017</h3>
+    <p class="speaker"><span class="title">Speaker</span>: Paolo Capriotti
+    <span class="video">(<a href="https://s3.eu-west-2.amazonaws.com/sheaves-videos/sheaves/5.mp4">video</a>)</span>
+    </p>
+    <p class="summary">
+        Sheaves on topological spaces, with various examples and non-examples.
+    </p>
+    <p class="participants">7 participants.</p>
+</div>
+
+<div class="card fluid"><h3>4th meeting - 17 Jan 2017</h3>
+    <p class="speaker"><span class="title">Speaker</span>: Paolo Capriotti
+    <span class="video">(<a href="https://s3.eu-west-2.amazonaws.com/sheaves-videos/sheaves/4.mp4">video</a>)</span>
+    </p>
+    <p class="summary">
+        Subobject classifier for various other presheaf categories. General case of subobject classifier for presheaves.
+    </p>
+    <p class="participants">9 participants.</p>
+</div>
+
+<div class="card fluid"><h3>3rd meeting - 6 Dec 2017</h3>
+    <p class="speaker"><span class="title">Speaker</span>: Paolo Capriotti
+    <span class="video">(<a href="https://s3.eu-west-2.amazonaws.com/sheaves-videos/sheaves/3.mp4">video</a>)</span>
+    </p>
+    <p class="summary">Continuous actions of infinite permutation groups. Equivalence of the two definitions of subobject classifiers. Subobject classifier for \(M\)-sets.
+    </p>
+    <p class="participants">5 participants.</p>
+</div>
+
+<div class="card fluid"><h3>2nd meeting - 29 Nov 2017</h3>
+    <p class="speaker"><span class="title">Speaker</span>: Paolo Capriotti
+    <span class="video">(<a href="https://s3.eu-west-2.amazonaws.com/sheaves-videos/sheaves/2.mp4">video</a>)</span>
+    </p>
+    <p class="summary">
+        Continuous \(G\)-sets, definition and first properties of subobject classifiers, subobject classifiers for \(\mathsf{Set}\), \(\mathsf{Set} \times \mathsf{Set}\) and \(G\)-sets .</p>
+    <p class="participants">9 participants.</p>
+</div>
+
+<div class="card fluid"><h3>1st meeting - 22 Nov 2017</h3>
+    <p class="speaker"><span class="title">Speaker</span>: Paolo Capriotti</p>
+    <p class="summary">Examples of topoi: presheaves, finite sets. Limits in presheaf categories.</p>
+    <p class="participants">10 participants.</p>
+</div>
+
+<div class="card fluid"><h3>0th meeting - 15 Nov 2017</h3>
+    <p class="speaker"><span class="title">Speaker</span>: Paolo Capriotti</p>
+    <p class="summary">Summary of the contents of the book: sheaves, Grothendieck topoi, elementary topoi, classifying topoi, locales, logical aspects of topos theory. Some examples of presheaf categories.</p>
+    <p class="participants">5 participants.</p>
+</div>
+
+</div>
+
+<div class="col-md-3 col-md-offset-1">
+<div class="card">
+<h3>Next meetings</h3>
 <ul>
  <li>
   21 Feb 2018 (3pm, <b>C1</b>)
@@ -38,92 +133,19 @@
   28 Mar 2018 (3pm, C80)
  </li>
 </ul>
+</div>
+</div>
 
-<hr />
+</div>
 
-<h2>Past meetings</h2>
+<footer class="row">
+    <div class="col-md-6">
+This page is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 Unported License</a>.
+    </div>
+    <div class="col-md-1 col-md-offset-5"
+<a rel="license" href="http://creativecommons.org/licenses/by/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/3.0/88x31.png" /></a>
+    </div>
+</footer>
 
-<h3>8th meeting - 14 Feb 2017</h3>
-    <p class="speaker"><span class="title">Speaker</span>: Jakob von Raumer
-    <span class="video">(<a href="https://s3.eu-west-2.amazonaws.com/sheaves-videos/sheaves/8.mp4">video</a>)</span>
-    </p>
-    <p class="summary">
-Grothendieck topologies and sites. Trivial, dense and atomic topologies. Bases of Grothendieck topologies. Sheaves over a site. Limits of sheaves. Sheaves over a base
-    </p>
-    <p class="participants">5 participants.</p>
-</h3>
-
-<h3>7th meeting - 7 Feb 2017</h3>
-    <p class="speaker"><span class="title">Speaker</span>: Paolo Capriotti
-    <span class="video">(<a href="https://s3.eu-west-2.amazonaws.com/sheaves-videos/sheaves/7.mp4">video</a>)</span>
-    </p>
-    <p class="summary">
-        Full construction of the adjunction between presheaves and étale bundles. Sheaves as a reflective subcategory of presheaves.
-    </p>
-    <p class="participants">8 participants.</p>
-</h3>
-
-<h3>6th meeting - 31 Jan 2017</h3>
-    <p class="speaker"><span class="title">Speaker</span>: Paolo Capriotti
-    <span class="video">(<a href="https://s3.eu-west-2.amazonaws.com/sheaves-videos/sheaves/6.mp4">video</a>)</span>
-    </p>
-    <p class="summary">
-        Bundles, locally trivial bundles, vector bundles, covering spaces. Tangent bundle of a manifold. Sheaf of sections of a bundle. Beginning of the construction of the étale bundle of a presheaf.
-    </p>
-    <p class="participants">5 participants.</p>
-</h3>
-
-<h3>5th meeting - 24 Jan 2017</h3>
-    <p class="speaker"><span class="title">Speaker</span>: Paolo Capriotti
-    <span class="video">(<a href="https://s3.eu-west-2.amazonaws.com/sheaves-videos/sheaves/5.mp4">video</a>)</span>
-    </p>
-    <p class="summary">
-        Sheaves on topological spaces, with various examples and non-examples.
-    </p>
-    <p class="participants">7 participants.</p>
-</h3>
-
-<h3>4th meeting - 17 Jan 2017</h3>
-    <p class="speaker"><span class="title">Speaker</span>: Paolo Capriotti
-    <span class="video">(<a href="https://s3.eu-west-2.amazonaws.com/sheaves-videos/sheaves/4.mp4">video</a>)</span>
-    </p>
-    <p class="summary">
-        Subobject classifier for various other presheaf categories. General case of subobject classifier for presheaves.
-    </p>
-    <p class="participants">9 participants.</p>
-</h3>
-
-<h3>3rd meeting - 6 Dec 2017</h3>
-    <p class="speaker"><span class="title">Speaker</span>: Paolo Capriotti
-    <span class="video">(<a href="https://s3.eu-west-2.amazonaws.com/sheaves-videos/sheaves/3.mp4">video</a>)</span>
-    </p>
-    <p class="summary">Continuous actions of infinite permutation groups. Equivalence of the two definitions of subobject classifiers. Subobject classifier for \(M\)-sets.
-    </p>
-    <p class="participants">5 participants.</p>
-</h3>
-
-
-<h3>2nd meeting - 29 Nov 2017</h3>
-    <p class="speaker"><span class="title">Speaker</span>: Paolo Capriotti
-    <span class="video">(<a href="https://s3.eu-west-2.amazonaws.com/sheaves-videos/sheaves/2.mp4">video</a>)</span>
-    </p>
-    <p class="summary">
-        Continuous \(G\)-sets, definition and first properties of subobject classifiers, subobject classifiers for \(\mathsf{Set}\), \(\mathsf{Set} \times \mathsf{Set}\) and \(G\)-sets .</p>
-    <p class="participants">9 participants.</p>
-</h3>
-
-<h3>1st meeting - 22 Nov 2017</h3>
-    <p class="speaker"><span class="title">Speaker</span>: Paolo Capriotti</p>
-    <p class="summary">Examples of topoi: presheaves, finite sets. Limits in presheaf categories.</p>
-    <p class="participants">10 participants.</p>
-</h3>
-
-
-<h3>0th meeting - 15 Nov 2017</h3>
-    <p class="speaker"><span class="title">Speaker</span>: Paolo Capriotti</p>
-    <p class="summary">Summary of the contents of the book: sheaves, Grothendieck topoi, elementary topoi, classifying topoi, locales, logical aspects of topos theory. Some examples of presheaf categories.</p>
-    <p class="participants">5 participants.</p>
-</h3>
-
-</BODY>
+</body>
 </html>
