--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 
-<link rel="stylesheet" href="https://gitcdn.link/repo/Chalarangelo/mini.css/master/dist/mini-nord.min.css">
+<link rel="stylesheet" href="mini-nord.min.css">
 
 <style type="text/css">
  .participants { font-size: small; text-align: right }
